--- a/package.json
+++ b/package.json
@@ -8,28 +8,29 @@
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@rollup/plugin-typescript": "^8.2.5",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@smui/drawer": "^6.0.0-beta.16",
     "@smui/list": "^6.0.0-beta.16",
-    "@tsconfig/svelte": "^2.0.1",
-    "autoprefixer": "^10.3.1",
-    "node-sass": "^6.0.1",
-    "postcss": "^8.3.6",
-    "rollup": "^2.3.4",
+    "@tsconfig/svelte": "^3.0.0",
+    "autoprefixer": "^10.4.5",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.13",
+    "rollup": "^2.71.0",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-check": "^2.2.3",
-    "svelte-preprocess": "^4.7.4",
-    "typescript": "^4.3.5"
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.47.0",
+    "svelte-check": "^2.7.0",
+    "svelte-preprocess": "^4.10.6",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "@mdi/js": "^6.6.96",
-    "sirv-cli": "^2.0.0",
-    "svelte-routing": "^1.6.0"
+    "sirv-cli": "^2.0.2",
+    "svelte-routing": "^1.6.0",
+    "svelte-table": "^0.3.4"
   }
 }
